--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <title>Advocate Asfar Athar Dayo</title>
     <link rel="stylesheet" href="style.css">
     <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
-    <link rel="stylesheet" media="screen and (max-width:800px)" href="tablet.css">
-    <link rel="stylesheet" media="screem and (mac-width: 530px)" href="phone.css">
+    <link rel="stylesheet" media="screen and (min-width: 531) and (max-width:800px)" href="tablet.css">
+    <link rel="stylesheet" media="screem and (min-width: 200) and (max-width:530px)" href="phone.css">
     <script src="script.js"></script>
 </head>
 
